test/org/midica/testfiles/failing/compact-pattern-call-with-options.midica
INCLUDE inc/instruments.midica

0: c d e:8 f/e/d/c:pat(foo,bar)q=2,m a b c

PATTERN pat
	0      /8
	1      /8
	2      /8
END
